<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ali.trialapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que1"
                android:layout_marginBottom="10dp"
                android:id="@+id/que1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/que1_text"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:layout_alignBottom = "@+id/que1"/>

            <Button
                android:id="@+id/date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que1_b"
                android:layout_marginBottom="10dp"
                android:id="@+id/que1_b"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/que1_b_text"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:layout_alignBottom = "@+id/que1_b"/>

            <Button
                android:id="@+id/time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que2"
                android:layout_marginBottom="10dp"
                android:id="@+id/que2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/que2_text"
                android:layout_alignBottom = "@+id/que2"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/que2_b"
                android:id="@+id/que2_b"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:maxLength="3"
                android:inputType="number"
                android:id="@+id/que2_b_text"
                android:layout_alignBottom = "@+id/que2_b"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que3"
                android:layout_marginBottom="10dp"
                android:id="@+id/que3"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:id="@+id/que3_Spinner"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom = "@+id/que3"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que4"
                android:layout_marginBottom="10dp"
                android:id="@+id/que4"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/que4_text"

                android:layout_alignBottom = "@+id/que4"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que4_b"
                android:layout_marginBottom="10dp"
                android:id="@+id/que4_b"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/que4_b_text"
                android:inputType="number"
                android:maxLength="3"
                android:layout_alignBottom = "@+id/que4_b"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que5"
                android:layout_marginBottom="10dp"
                android:id="@+id/que5"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/que5_text"
                android:inputType="number"
                android:maxLength="6"
                android:layout_alignBottom = "@+id/que5"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que6"
                android:layout_marginBottom="10dp"
                android:id="@+id/que6"/>


            <!--<TableRow-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:id="@+id/tbr">-->

                <!---->

            <!--</TableRow>-->

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:id="@+id/que6_Spinner"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/que6_text"
                android:inputType="number"
                android:maxWidth="30dp"
                android:maxLength="3" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que7"
                android:layout_marginBottom="10dp"
                android:id="@+id/que7"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:id="@+id/que7_Spinner"
                android:layout_marginBottom="5dp"
                android:layout_alignBottom = "@+id/que7"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/attention1"
                android:textColor="@color/colorAccent"
                android:padding="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/attention1"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que8"
                android:layout_marginBottom="10dp"
                android:id="@+id/que8"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:id="@+id/que8_Spinner"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom = "@+id/que8"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/attention2"
                android:padding="3dp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:id="@+id/attention2"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que9"
                android:layout_marginBottom="10dp"
                android:id="@+id/que9"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:id="@+id/que9_Spinner"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom = "@+id/que9"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/que10"
                android:layout_marginBottom="10dp"
                android:id="@+id/que10"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:id="@+id/que10_Spinner"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom = "@+id/que10"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/que10_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Submit"
                android:id="@+id/btn_submit"/>

        </TableLayout>

    </ScrollView>


</LinearLayout>
